# tromp-cli

./: README.md  cabal.project  lambda-diagram.cabal
app/: Main.hs
