cabal-version:       >=1.24
name:                lambda-diagram
version:             0.1.0.0
build-type:          Simple

executable lambda-diagram
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:
      base >=4.12 && <5,
      megaparsec >=9.2 && <9.7,
      containers
